tests/baselines/reference/slightlyIndirectedDeepObjectLiteralElaborations.errors.txt
slightlyIndirectedDeepObjectLiteralElaborations.ts(16,17): error TS2322: Type 'number' is not assignable to type 'string'.


==== slightlyIndirectedDeepObjectLiteralElaborations.ts (1 errors) ====
    interface Foo {
        a: {
            b: {
                c: {
                    d: string
                }
            }
        }
    }
    
    let q: Foo["a"] | undefined;
    const x: Foo = (void 0, {
        a: q = {
            b: ({
                c: {
                    d: 42
                    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 slightlyIndirectedDeepObjectLiteralElaborations.ts:5:17: The expected type comes from property 'd' which is declared here on type '{ d: string; }'
                }
            })
        }
    });
    